crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_fenced_div_body_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..18
  HTML_BLOCK@0..18
    HTML_BLOCK_TAG@0..6
      TEXT@0..5 "<div>"
      NEWLINE@5..6 "\n"
    HTML_BLOCK_CONTENT@6..18
      TEXT@6..10 ":::x"
      NEWLINE@10..11 "\n"
      TEXT@11..17 "</div>"
      NEWLINE@17..18 "\n"
