crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_fenced_div_body_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..18
  HTML_BLOCK_DIV@0..18
    HTML_BLOCK_TAG@0..6
      TEXT@0..4 "<div"
      TEXT@4..5 ">"
      NEWLINE@5..6 "\n"
    FENCED_DIV@6..18
      DIV_FENCE_OPEN@6..11
        TEXT@6..9 ":::"
        DIV_INFO@9..10
          TEXT@9..10 "x"
        NEWLINE@10..11 "\n"
      HTML_BLOCK@11..18
        HTML_BLOCK_TAG@11..18
          TEXT@11..17 "</div>"
          NEWLINE@17..18 "\n"
