crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_inner_blocks_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..17
  HTML_BLOCK_DIV@0..17
    HTML_BLOCK_TAG@0..6
      TEXT@0..4 "<div"
      TEXT@4..5 ">"
      NEWLINE@5..6 "\n"
    PARAGRAPH@6..10
      TEXT@6..9 "foo"
      NEWLINE@9..10 "\n"
    HTML_BLOCK_TAG@10..17
      TEXT@10..16 "</div>"
      NEWLINE@16..17 "\n"
