crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_inside_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..58
  BLOCK_QUOTE@0..58
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK_DIV@2..58
      HTML_BLOCK_TAG@2..32
        TEXT@2..6 "<div"
        WHITESPACE@6..7 " "
        HTML_ATTRS@7..30
          TEXT@7..30 "id=\"warn\" class=\"alert\""
        TEXT@30..31 ">"
        NEWLINE@31..32 "\n"
      HTML_BLOCK_CONTENT@32..49
        BLOCK_QUOTE_MARKER@32..33 ">"
        WHITESPACE@33..34 " "
        TEXT@34..48 "Hello *world*."
        NEWLINE@48..49 "\n"
      HTML_BLOCK_TAG@49..58
        BLOCK_QUOTE_MARKER@49..50 ">"
        WHITESPACE@50..51 " "
        TEXT@51..57 "</div>"
        NEWLINE@57..58 "\n"
